# bevy_debug_panel

./: Cargo.toml  LICENSE  README.md
examples/: fps.rs  fps_simple.rs  fps_trigger.rs
src/: lib.rs
src/plugin/: mod.rs
